Modelo simplificado, QR decomposition, etc..

--- a/TestOpencv/TestOpencv.vcxproj
+++ b/TestOpencv/TestOpencv.vcxproj
@@ -107,7 +107,7 @@
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>$(OPENCV_DIR)\..\..\include;C:\Users\zeron\Downloads\tet-cpp-client-master\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\eigen-eigen-67e894c6cd8f;$(OPENCV_DIR)\..\..\include;C:\Users\zeron\Downloads\tet-cpp-client-master\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
